# todo

./: CHANGELOG.md  Jenkinsfile  README.md  Vagrantfile  docker-compose.yml  sonar-project.properties
backend/: .env-example  Dockerfile  cmd.sh  gunicorn_conf.py  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/routers/auth/: auth.py
backend/app/routers/todos/: todos.py
backend/app/routers/todos/tests/: test_todos.py
backend/app/routers/utils/: utils.py
backend/app/routers/utils/tests/: test_utils.py
backend/app/utilities/: db.py  logger.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.test.tsx  App.tsx  index.tsx
frontend/src/Components/Header/: Header.test.tsx  Header.tsx  Header.types.ts
frontend/src/Components/Home/: Home.test.tsx  Home.tsx
frontend/src/Components/Settings/: Settings.test.tsx  Settings.tsx
frontend/src/Components/Sidebar/: Sidebar.test.tsx  Sidebar.tsx
frontend/src/Components/Todos/: Todos.test.tsx  Todos.tsx  Todos.types.ts
frontend/src/contexts/: settingsContext.ts
frontend/src/hooks/: useTheme.ts
frontend/src/utils/: apiClients.ts
infra/: Chart.yaml  values-stage.yaml  values.yaml
infra/templates/backend/: appd-cm.yaml  deployment.yaml  secret.yaml  service.yaml
infra/templates/frontend/: cm.yaml  deployment.yaml  pvc.yaml  route.yaml  service.yaml
