[tool.poetry]
name = "todo"
version = "1.0.0"
description = "todo"
authors = []
readme = "README.md"

[tool.metadata]
title = "todo"
full_description = """
todo

📝 [Source Code](https://gitlab-sjc.cisco.com/cxInnovations/iad/todo)   
🐞 [Issues](https://gitlab-sjc.cisco.com/cxInnovations/iad/todo/issues)  
"""

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.96.0"
uvicorn = {version = "0.22.0", extras = ["standard"]}
gunicorn = "^20.1.0"
python-dotenv = "1.0.0"
pymongo = "^4.3.3"
requests = "2.31.0"
toml = "^0.10.2"
httpx = "0.24.1"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
isort = "5.12.0"
flake8 = "^6.0.0"
pytest = "7.3.1"
coverage = "7.2.7"
mypy = "1.3.0"
types-toml = "0.10.8.6"
types-requests = "2.31.0.1"
mongomock = "^4.1.2"
autoflake = "^2.1.1"

[tool.poetry.group.prod.dependencies]
appdynamics = "23.5.1.5986"

[tool.black]
line-length = 88

[tool.isort]
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["black"]

[tool.mypy]
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
disallow_untyped_decorators = false
ignore_missing_imports = true
implicit_reexport = true
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
